fix layout problem: small checkbox

--- a/app/admin/template/setting/api.twig
+++ b/app/admin/template/setting/api.twig
@@ -26,7 +26,7 @@
 				<div class="form-group">
 					<label class="col-xs-3 control-label">{% trans "Make all documents available via API" %}</label>
 					<div class="col-xs-9">
-						<input type="checkbox" name="setting[api_public_documents]" {% if settings.api_public_documents %}checked{% endif %} id="chk_api_public_documents">
+						<input type="checkbox" name="setting[api_public_documents]" {% if settings.api_public_documents %}checked{% endif %} id="chk_api_public_documents" data-group-cls="btn-group-xs">
 					</div>
 				</div>
 
