fix sorting permission for incoming invoices

--- a/app/admin/template/administrative/document/invoice.twig
+++ b/app/admin/template/administrative/document/invoice.twig
@@ -111,7 +111,7 @@
 					<th>{{ pager.create_header('Title'|trans, 'title')|raw }}</th>
 					<th>{{ pager.create_header('Supplier'|trans, 'supplier.company')|raw }}
 					<th>{% trans "Tags" %}</th>
-					<th>{{ pager.create_header('Paid'|trans, 'paid')|raw }}</th>
+					<th>{{ pager.create_header('Paid'|trans, 'document_incoming_invoice.paid')|raw }}</th>
 					<th class="text-right">{{ pager.create_header('Price'|trans, 'document_incoming_invoice.price_incl')|raw }}</th>
 					<th width="30">&nbsp;</th>
 					<th colspan="2">&nbsp;</th>
