--- a/app/admin/template/_default/nav_bar.twig
+++ b/app/admin/template/_default/nav_bar.twig
@@ -91,11 +91,12 @@
 			</ul>
 			{% endif %}
 
-			{% if env.session.user.has_permission('admin.financial') %}
+			{% if env.session.user.has_permission('admin.bookkeeping') %}
 			<ul class="nav navbar-nav">
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Financial" %} <b class="caret"></b></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Bookkeeping" %} <b class="caret"></b></a>
 					<ul class="dropdown-menu">
+						<li {% if env.module.get_name() == 'bookkeeping_account' %}class="active"{% endif %}><a href="/bookkeeping/account">{% trans "Bookkeeping accounts" %}</a></li>
 						<li {% if env.module.get_name() == 'financial_account' %}class="active"{% endif %}><a href="/financial/account">{% trans "Bank accounts" %}</a></li>
 					</ul>
 				</li>
