performance improvment: do sorting on database field instead of a function

--- a/app/admin/template/administrative/document/documentation.twig
+++ b/app/admin/template/administrative/document/documentation.twig
@@ -65,7 +65,7 @@
 			<thead>
 				<tr>
 					<th>{{ pager.create_header('#'|trans, 'document.id')|raw }}</th>
-					<th>{{ pager.create_header('Date'|trans, 'date')|raw }}</th>
+					<th>{{ pager.create_header('Date'|trans, 'document.date')|raw }}</th>
 					<th>{% trans "Documentation for" %}</th>
 					<th>{{ pager.create_header('Title'|trans, 'title')|raw }}</th>
 					<th>{% trans "Tags" %}</th>
