--- a/app/admin/template/administrative/document/invoice.twig
+++ b/app/admin/template/administrative/document/invoice.twig
@@ -105,7 +105,7 @@
 			<thead>
 				<tr>
 					<th>{{ pager.create_header('#'|trans, 'document.id')|raw }}</th>
-					<th>{{ pager.create_header('Date'|trans, 'date')|raw }}</th>
+					<th>{{ pager.create_header('Date'|trans, 'document.date')|raw }}</th>
 					<th>{{ pager.create_header('Accounting ID'|trans, 'document_incoming_invoice.accounting_identifier')|raw }}</th>
 					<th>{{ pager.create_header('Expiration date'|trans, 'document_incoming_invoice.expiration_date')|raw }}</th>
 					<th>{{ pager.create_header('Title'|trans, 'title')|raw }}</th>
