--- a/app/admin/template/administrative/document.twig
+++ b/app/admin/template/administrative/document.twig
@@ -435,7 +435,7 @@
 				<thead>
 					<tr>
 						<th>{{ pager.create_header('#'|trans, 'document.id')|raw }}</th>
-						<th>{{ pager.create_header('Date'|trans, 'date')|raw }}</th>
+						<th>{{ pager.create_header('Date'|trans, 'document.date')|raw }}</th>
 						<th>{{ pager.create_header('Title'|trans, 'title')|raw }}</th>
 						<th>{% trans "Tags" %}</th>
 						<th colspan="3">&nbsp;</th>
