--- a/app/admin/template/administrative/document/creditnote.twig
+++ b/app/admin/template/administrative/document/creditnote.twig
@@ -82,7 +82,7 @@
 			<thead>
 				<tr>
 					<th>{{ pager.create_header('#'|trans, 'id')|raw }}</th>
-					<th>{{ pager.create_header('Date'|trans, 'date')|raw }}</th>
+					<th>{{ pager.create_header('Date'|trans, 'document.date')|raw }}</th>
 					<th>{{ pager.create_header('Title'|trans, 'title')|raw }}</th>
 					<th>{% trans "Tags" %}</th>
 					<th>{{ pager.create_header('Paid'|trans, 'paid')|raw }}</th>
